
enum Column {
  A = 1;
  B = 2;
  C = 3; 
  D = 4;
  E = 5;
  F = 6;
  G = 7;
}

enum Row {
  One = 1;
  Two = 2;
  Three = 3;
  Four = 4;
  Five = 5;
  Six = 6;
  Seven = 7;
  Eight = 8;
  Nine = 9;
}

message SearchPosition {

  enum Piece {
    MOUSE = 1;
    CAT = 2;
    DOG = 3;
    WOLF = 4;
    HYENA = 5;
    TIGER = 6;
    LION = 7;
    ELEPHANT = 8;
  }

  message Position {
    
    message Square {
      required Column col = 1;
      required Row row = 2;
      optional Piece piece = 3;
    }

    repeated Square squares = 1;
  }

  enum Player {
    PlayerA = 1;
    PlayerB = 2;
  }

  message Weight {
    required Row row = 1;
    required Column col = 2;
    required Piece piece = 3;
    required int32 weight = 4;
  }

  required Position position = 1;
  required Player turn = 2;
  repeated Weight weights = 3;
}

message Move {
  required Column fromCol = 1;
  required Row fromRow = 2;
  required Column toCol = 3;
  required Row toRow = 4;
}

